--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,15 +1,17 @@
-.footer {
-  
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.footer { 
   background-color: rgb(38, 8, 50);
   color: white;
   padding: 10px 20px;
-  margin-top: 50px; 
-  bottom: 0; 
-  left: 0;
   width: 100vw; 
   box-shadow: 0 2px 10px rgba(0,0,0,0.5);
   text-align: center;
   z-index: 100;
+  margin-top: auto;
 }
-
-
