--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -74,20 +74,14 @@ Gamepage
             <h6>(Support Packages Available for Purchase Soon!)</h5>
                 <div class="supportContainer">
                     <div class="supportContainer">
-                        {{#with level.reward}}
-                        <div class="levelOne supportPackage">
-                            <h5>Level One: {{level.price}}</h5>
-                            <p>{{level.reward}}</p>
-                        </div>
-                        <div class="levelTwo supportPackage">
-                            <h5>Level Two: {{level.price}}</h5>
-                            <p>{{level.reward}}</p>
-                        </div>
-                        <div class="levelThree supportPackage">
-                            <h5>Level Three: {{level.price}}</h5>
-                            <p>{{level.reward}}</p>
-                        </div>
-                        {{/with}}
+                     <div class="supportContainer">
+    {{#each game.levels}}
+        <div class="supportPackage">
+            <h5>Level {{this.level_number}}: ${{this.price}}</h5>
+            <p>{{this.reward}}</p>
+        </div>
+    {{/each}}
+</div>
                     </div>
                 </div>
         </aside>
