--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -3,7 +3,7 @@
 <footer class="footer">
   <!-- Copyright -->
   <div class="text-center p-3" style="bg-color: rgba(0, 0, 0, 0.05);">
-    Indie Ignite © 2024 Copyright: Created by us
+    Indie Ignite © 2024. Created by Team !null.
     
   </div>
   <!-- Copyright -->
