--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -20,9 +20,12 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
                 </li>
+                {{#if logged_In}}
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/upload">Upload</a>
                 </li>
+                {{/if}}
+                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,7 +40,7 @@
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 {{#if logged_In}}
-                  </li class="nav-item">
+                  <li class="nav-item">
                 <a href="/api/users/logout" id="logoutButton" class="nav-link active">Logout</a>
                 </li>
                 {{else}}    
