--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,7 +25,7 @@
             </div>
             <h2 class="">Creations</h2>
             <div class="profile-creations-section bg-custom mt-4 p-3 rounded">
-                {{#each creations}}
+                {{#each games}}
                 <div class="creation-item">
                     <a href="/game/{{this.id}}" class="text-white">{{this.title}}</a>
                 </div>
