--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -23,19 +23,12 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/upload">Upload</a>
                 </li>
-                <li class="nav-item dropdown">
+                {{!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    </a> --}}
+                    
                 <li class="nav-item">
                     <a class="nav-link active" id="loginButton" aria-current="page" href="/login">Login</a>
                 </li>
