--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -26,7 +26,7 @@
                 </li>
                 {{/if}}
                 
-                <li class="nav-item dropdown">
+                {{!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Dropdown
@@ -38,7 +38,7 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    </ul> --}}
                 {{#if logged_In}}
                   <li class="nav-item">
                 <a href="/api/users/logout" id="logoutButton" class="nav-link active">Logout</a>
