added bootstrap script to missing pages

--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -34,7 +34,8 @@
                         <textarea class="form-control" id="game-description" name="game-description" placeholder="Game Description" required></textarea>
                     </div>
                     <div id="drop_zone" class="border p-3 mb-3 d-none d-lg-flex" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
-                        <p>Drag or drop photos or video here.</p>
+                        
+                        <p> STRETCH GOAL: Drag or drop photos or video here.</p>
                     </div>
                     <div class="mb-3">
                         <label for="formFile" class="form-label">Or upload a file from your computer</label>
