--- a/views/gamePage.handlebars
+++ b/views/gamePage.handlebars
@@ -88,6 +88,7 @@ Gamepage
         </aside>
     </div>
     <script src="/assets/js/game.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
