--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -34,3 +34,4 @@
         </div>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
