--- a/views/profileEdit.handlebars
+++ b/views/profileEdit.handlebars
@@ -69,5 +69,6 @@
     container.insertBefore(input, this);
     });
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
