--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -37,10 +37,13 @@ html {
     float:right;
     margin-top: 25px;
     margin-right: 20px;
-   
+    height: 50px;
+    width: 100px;
+    background-image: linear-gradient(rgba(159, 90, 255, 0.5), rgba(67, 30, 126, 0.5)), url(../images/profileBACKGROUND.jpg);
+    border-radius: 10%;
 }
 .editBtn a{
-    color:rgb(81, 24, 99)
+    color:white;
 }
 .profile-image-section {
     grid-row: 1 / 3;
