--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,7 +20,8 @@
                 <input type="text" placeholder="Username" id="username-signup">
                 <input type="email" placeholder="Email" id="email-signup">
                 <input type="password" placeholder="Password" id="password-signup">
-                <span class="sign-up-toggle-icon"><i class="fas fa-eye"></i></span>
+                 <input type="password" placeholder="Confirm Password" id="password-confirm">
+                  <span class="sign-up-toggle-icon"><i class="fas fa-eye"></i></span>
                 <button>Sign Up</button>
             </form>
         </div>
