--- a/views/upload.handlebars
+++ b/views/upload.handlebars
@@ -16,6 +16,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1>Upload Your Game</h1>
+                <p>if your main photo is not 2:3, it will be cut off on the homepage preview</p>
             </div>
         </div>
         <div id="main-content-container" class="content-container mt-2">
