--- a/views/partials/gamecard.handlebars
+++ b/views/partials/gamecard.handlebars
@@ -1,6 +1,6 @@
 <a href="/game/{{id}}">
 <div class="gamecard" id="{{Id}}">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
         {{#if image}}
         <img class="card-img-top" src="{{image}}">
         {{else}}
